test/typeerrors/ex8.golden
Building file ../test/typeerrors/ex8.act
  Compiling ex8.act for release

ERROR: Error when compiling ex8 module: Type error
 3:14-14
  |
3 |    for x in n:
  |             ^
The type t of the indicated expression must satisfy the following unsolvable collection of constraints:
    __builtin__.int must be castable to t
    t must implement __builtin__.Iterable[_]

